fix image formatting on mobile

--- a/src/components/article/Article.module.css
+++ b/src/components/article/Article.module.css
@@ -7,4 +7,5 @@
   margin: 10px;
   width: unset;
   max-height: 400px;
+  max-width: 90vw;
 }
